Add automatic tests

--- a/templates/add_delegation.html
+++ b/templates/add_delegation.html
@@ -39,7 +39,7 @@
                 <label for="{{ form.duration.id_for_label }}">Czas trwania (dni):</label>
                 {{ form.duration }}
             </div>
-                <input type="submit" value="Dodaj" class="submit">
+                <input type="submit" id="add_delegation" value="Dodaj" class="submit">
             </form>
         </div>
     </div>
