--- a/templates/delegations.html
+++ b/templates/delegations.html
@@ -110,7 +110,7 @@
         </table>
 
         {% if user_role %}
-            <a href="/deleg/add_delegation"><button class="button add">Dodaj delegację</button></a>
+            <a href="/deleg/add_delegation"><button class="button add" id="add_button">Dodaj delegację</button></a>
         {% endif %}
 
 
